// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloorItemRow Component Renders a FloorItem 1`] = `
<Context.Provider
  value={
    Object {
      "store": Object {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "@@observable": [Function],
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <FloorItemRow
    dispatch={[MockFunction]}
    item={
      Object {
        "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
        "itemNbr": 980078597,
        "price": 2.4,
      }
    }
  />
</Context.Provider>
`;

exports[`FloorItemRow Component Renders a FloorItem with a long name 1`] = `
<Context.Provider
  value={
    Object {
      "store": Object {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "@@observable": [Function],
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <FloorItemRow
    dispatch={[MockFunction]}
    item={
      Object {
        "itemDesc": "An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description",
        "itemNbr": 980078597,
        "price": 2.4,
      }
    }
  />
</Context.Provider>
`;
